we need to parse the cell address after import, fdo#59843

Otherwise we may have problems with sheet names from sheets that are not
yet imported.

Change-Id: I99a6507567b7d1018b790a90019cd563fa7323a0
Reviewed-on: https://gerrit.libreoffice.org/1944
Reviewed-by: Kohei Yoshida <kohei.yoshida@gmail.com>
Tested-by: Kohei Yoshida <kohei.yoshida@gmail.com>